# mlops_course

./: .gitignore  README.md  docker-compose.yaml  requirements.txt
LAB2/: .gitignore  Dockerfile  Jenkinsfile  docker-compose.yaml  requirements.txt
LAB2/src/tests/: model_testing.py
lab3/: Dockerfile  app.py  config.json  docker-compose.yml  model.joblib  nginx.conf  pipeline.sh  requirements.txt  train.py
src/features/: data_preprocessing.py
task1/: README.md  pipeline.sh  pyvenv.cfg
task1/model/: model.py  quantiles.json
task1/src/models/: model_prepatation.py
task1/src/tests/: model_testing.py
task2/: .gitignore  conveyor.sh  pyproject.toml  start.py
task2/reports/: scores.csv
task2/source/: Shapely-1.8.1-cp39-cp39-manylinux_2_12_x86_64.manylinux2010_x86_64.whl
task2/src/: .gitignore  __init__.py
task2/src/data/: .gitignore  clean_data.py  get_osm_cafes_data.py  select_region.py
task2/src/features/: add_cafe_radius_features.py  add_features.py
task2/src/models/: evaluate.py  prepare_datasets.py  train.py
